# fmu-builder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  manage.py  nginx-conf  requirements.txt  start_uwsgi.sh  stop_uwsgi.sh
builderapp/: apps.py  models.py  views.py
builderapp/migrations/: 0001_initial.py
builderapp/templates/: upload.html
fmu-compiler/: CMakeLists.txt  compile-fmu.sh
fmu-compiler/includes/templates/: fmuTemplate.c  fmuTemplate.h
fmu-compiler/toolchains/: osx-gcc.cmake
fmu_builder/: settings.py  urls.py  wsgi.py
fmu_builder/website/: models.py  test.sh  views.py
fmu_builder/website/migrations/: 0001_initial.py
fmu_builder/website/templates/: upload.html
fmubuildersite/: asgi.py  settings.py  urls.py  wsgi.py
